==> S-R-Afraid/Embedded-STM32/24PID/myproject/10_PID_Inverted_Pendulum_SimpleDriver/Drivers/BSP/SPI/MySPI.c <==
#include "./BSP/SPI/MySPI.h"


/*引脚配置层*/

/**
  * 函    数：SPI写SS引脚电平
  * 参    数：BitValue 协议层传入的当前需要写入SS的电平，范围0~1
  * 返 回 值：无
  * 注意事项：此函数需要用户实现内容，当BitValue为0时，需要置SS为低电平，当BitValue为1时，需要置SS为高电平
  */
void MySPI_W_SS(GPIO_TypeDef* GPIOx,uint16_t GPIO_Pin,uint8_t BitValue)
{
	HAL_GPIO_WritePin(GPIOx, GPIO_Pin, BitValue?1:0);		//根据BitValue，设置SS引脚的电平
}

/**
  * 函    数：SPI写SCK引脚电平
  * 参    数：BitValue 协议层传入的当前需要写入SCK的电平，范围0~1
  * 返 回 值：无
  * 注意事项：此函数需要用户实现内容，当BitValue为0时，需要置SCK为低电平，当BitValue为1时，需要置SCK为高电平
  */
void MySPI_W_SCK(uint8_t BitValue)
{
	HAL_GPIO_WritePin(SPI_SCK_GPIO_PORT, SPI_SCK_GPIO_PIN, BitValue?1:0);		//根据BitValue，设置SCK引脚的电平
}

/**
  * 函    数：SPI写MOSI引脚电平
  * 参    数：BitValue 协议层传入的当前需要写入MOSI的电平，范围0~1
  * 返 回 值：无
  * 注意事项：此函数需要用户实现内容，当BitValue为0时，需要置MOSI为低电平，当BitValue为1时，需要置MOSI为高电平
  */
void MySPI_W_MOSI(uint8_t BitValue)
{
	HAL_GPIO_WritePin(SPI_DI_GPIO_PORT, SPI_DI_GPIO_PIN, BitValue?1:0);		//根据BitValue，设置MOSI引脚的电平，BitValue要实现非0即1的特性
}

/**
  * 函    数：I2C读MISO引脚电平
  * 参    数：无
  * 返 回 值：协议层需要得到的当前MISO的电平，范围0~1
  * 注意事项：此函数需要用户实现内容，当前MISO为低电平时，返回0，当前MISO为高电平时，返回1
  */
uint8_t MySPI_R_MISO(void)
{
	return HAL_GPIO_ReadPin(SPI_DO_GPIO_PORT, SPI_DO_GPIO_PIN);			//读取MISO电平并返回
}

/**
  * 函    数：SPI初始化
  * 参    数：无
  * 返 回 值：无
  * 注意事项：此函数需要用户实现内容，实现SS、SCK、MOSI和MISO引脚的初始化
  */
void MySPI_Init(void)
{
    /*开启时钟*/
    SPI_CLE_ENABLE();
    
    /*GPIO初始化*/
    GPIO_InitTypeDef gpio_init_struct;
    gpio_init_struct.Mode = GPIO_MODE_OUTPUT_PP;
    //gpio_init_struct.Pin = SPI_W25Q64_PIN;
    gpio_init_struct.Speed = GPIO_SPEED_FREQ_HIGH;
    //HAL_GPIO_Init(SPI_W25Q64_PORT, &gpio_init_struct);
    gpio_init_struct.Pin = SPI_SCK_GPIO_PIN;
    HAL_GPIO_Init(SPI_SCK_GPIO_PORT, &gpio_init_struct);
    gpio_init_struct.Pin = SPI_DI_GPIO_PIN;
    HAL_GPIO_Init(SPI_DI_GPIO_PORT, &gpio_init_struct);
    
    //将PA4、PA5和PA7引脚初始化为推挽输出
    
    gpio_init_struct.Mode = GPIO_MODE_INPUT;
    gpio_init_struct.Pull = GPIO_NOPULL;
    gpio_init_struct.Pin = SPI_DO_GPIO_PIN;
    gpio_init_struct.Speed = GPIO_SPEED_FREQ_HIGH;
    HAL_GPIO_Init(SPI_DO_GPIO_PORT, &gpio_init_struct);     //将PA6引脚初始化为上拉输入
    
    /*设置默认电平*/
    //MySPI_W_SS(SPI_W25Q64_PORT,SPI_W25Q64_PIN,1);           //SS默认高电平
    MySPI_W_SCK(0);                                         //SCK默认低电平
}

/*协议层*/

/**
  * 函    数：SPI起始
  * 参    数：无
  * 返 回 值：无
  */
void MySPI_Start(GPIO_TypeDef* GPIOx,uint16_t GPIO_Pin)
{
    MySPI_W_SS(GPIOx,GPIO_Pin,0);              //拉低SS，开始时序
}

/**
  * 函    数：SPI终止
  * 参    数：无
  * 返 回 值：无
  */
void MySPI_Stop(GPIO_TypeDef* GPIOx,uint16_t GPIO_Pin)
{
    MySPI_W_SS(GPIOx,GPIO_Pin,1);              //拉高SS，终止时序
}

/**
  * 函    数：SPI交换传输一个字节，使用SPI模式0
  * 参    数：ByteSend 要发送的一个字节
  * 返 回 值：接收的一个字节
  */
uint8_t MySPI_SwapByte(uint8_t ByteSend)
{
    uint8_t i, ByteReceive = 0x00;                  //定义接收的数据，并赋初值0x00，此处必须赋初值0x00，后面会用到
    
    for (i = 0; i < 8; i ++)                        //循环8次，依次交换每一位数据
    {
        /*两个!可以对数据进行两次逻辑取反，作用是把非0值统一转换为1，即：!!(0) = 0，!!(非0) = 1*/
        MySPI_W_MOSI(!!(ByteSend & (0x80 >> i)));   //使用掩码的方式取出ByteSend的指定一位数据并写入到MOSI线
        MySPI_W_SCK(1);                             //拉高SCK，上升沿移出数据
        if (MySPI_R_MISO()){ByteReceive |= (0x80 >> i);}	//读取MISO数据，并存储到Byte变量
                                                            //当MISO为1时，置变量指定位为1，当MISO为0时，不做处理，指定位为默认的初值0
        MySPI_W_SCK(0);                             //拉低SCK，下降沿移入数据
    }
    
    return ByteReceive;                             //返回接收到的一个字节数据
}
